2007-05-03  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c : Block SIGCHLD in pdsh threads. Fixes case
	  where SIGCHLD (from use of ssh module) is delivered to
	  unexpected thread causing the thread to think it has been
	  timed out by wdog thread.

2007-01-15  Mark Grondona <mgrondona@llnl.gov>

	* Makefile.am, src/pdsh/Makefile.am, doc/Makefile.am,
	  Makefile.in, src/pdsh/Makefile.in, doc/Makefile.in :
	  Generate some 'uninstall-local' targets so that 'make uninstall'
	  works as expected. Generate warning if files still exist
	  in pkglibdir after uninstall. Rerun ./bootstrap.

2006-12-12  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Fix mid-block declaration that
	  could cause compilation problem for some machines.

2006-12-11  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : Undocumented -K option to explicitly keep 
	  domain names in output labels.

	* : tag pdsh-2.12.

2006-12-10  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c : Issue warning if module type/name is loaded
	  more than once, and delete module with lower priority.

2006-12-09  Mark Grondona <mgrondona@llnl.gov>

	* src/common/macros.h : Only define bool if "true" and "false"
	  are not already defined. Avoids compile error when they are
	  macros.

2006-12-07  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec, doc/Makefile.am, doc/Makefile.in,
	  src/pdsh/Makefile.am, src/pdsh/Makefile.in : 
	  Install and package rpdcp and its man page.

	* src/common/err.h, src/common/err.c : Optionally keep domain
	  part of name with "%S" format specifier when err_no_strip_domain()
	  is called.

	* src/common/dsh.c : If any two targets have differing domains,
	  do not strip the domain in output labels.

	* src/modules/slurm.c : Modify help string to indicate that "all"
	  is a valid parameter to -j option.

2006-12-07  Albert Chu <chu11@llnl.gov>

	Support a Reverse pdcp option.

	* src/pdsh/pcp_server.c : Remove global infd and outfd file descriptors.